# Indicator-Appmenu

./: .bzrignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  com.canonical.hud.service.in  com.canonical.indicator.appmenu.gschema.xml  com.canonical.indicator.appmenu.gschema.xml.in  com.canonical.indicator.appmenu.hud.gschema.xml  com.canonical.indicator.appmenu.hud.gschema.xml.in  com.canonical.indicator.appmenu.hud.search.gschema.xml  com.canonical.indicator.appmenu.hud.search.gschema.xml.in
debian/: changelog  control  copyright  indicator-appmenu-crashdb.conf  indicator-appmenu-tools.install  indicator-appmenu.install  rules  source_indicator-appmenu.py
debian/patches/: 01-shortcut-fix.patch  01_bzr_fix_race_condition.patch  double-ref-of-entry-label.patch  series
docs/: Makefile.am  Makefile.in
docs/devel/: Makefile.am  Makefile.in  hud-docs.xml  hud-sections.txt  hud.types
docs/devel/html/: HudAppIndicatorSource.html  HudAppMenuRegistrar.html  HudDbusmenuCollector.html  HudIndicatorSource.html  HudItem.html  HudMenuModelCollector.html  HudQuery.html  HudResult.html  HudSource.html  HudSourceList.html  HudWindowSource.html  annotation-glossary.html  api-index-full.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  deprecated-api-index.html  hud-HudSettings.html  hud-HudStringList.html  hud.devhelp2  index.html  index.sgml  object-tree.html
docs/man/: Makefile.am  Makefile.in  hud-cli.1  hud-cli.xml  hud-dump-application.1  hud-dump-application.xml  hud-list-applications.1  hud-list-applications.xml  hud-verify-app-info.1  hud-verify-app-info.xml
po/: POTFILES.in  POTFILES.skip  indicator-appmenu.pot
scripts/: Makefile  Makefile.am  Makefile.in  menu-pusher.c
service/: Makefile.am  dbusmenu-collector.c  dbusmenu-collector.h  distance.c  distance.h  dump-app-info.c  dump-app-info.h  hud-cli.c  hud-dbus.c  hud-dbus.h  hud-dump-application.c  hud-list-applications  hud-search.c  hud-search.h  hud-service.c  hud-verify-app-info.c  hud.xml  indicator-tracker.c  indicator-tracker.h  load-app-info.c  load-app-info.h  shared-values.h  usage-tracker.c  usage-tracker.h
src/: Makefile.am  Makefile.in  application-menu-debug-server.h  application-menu-debug.xml  application-menu-registrar-server.h  application-menu-registrar.xml  application-menu-renderer.xml  create-db.c  create-db.h  create-db.sql  dbus-shared.h  dbusmenu-collector.c  dbusmenu-collector.h  distance.c  distance.h  gactionobservable.h  gdk-get-func.c  gdk-get-func.h  gtkmodelmenu.c  gtkmodelmenu.h  gtkmodelmenuitem.c  gtkmodelmenuitem.h  hud-cli.c  hud-dbus.c  hud-dbus.h  hud-dump-application.c  hud-gtk.vala  hud-list-applications  hud-search.c  hud-search.h  hud-service.c  hud-verify-app-info.c  hud.interface.c  hud.interface.h  hud.xml  hudappindicatorsource.c  hudappindicatorsource.h  hudappmenuregistrar.c  hudappmenuregistrar.h  huddbusmenucollector.c  (+48 more)
tests/: Makefile.am  Makefile.in  hud-performance.c  test-app-indicator-tracker.c  test-app-indicator.c  test-bad-app-info.c  test-create-db.sql  test-dbus-message-count  test-dbus-message-count-send-query  test-dbus-message-count.in  test-distance.c  test-indicator-tracker-owner.c  test-indicator-tracker.c  test-load-app-info.c  test-result-highlighting.c  test-usage-db-ancient.c  test-usage-db-ancient.sql  test-usage-db-old.c  test-usage-db-old.sql  test-usage-db-simple.c  test-usage-db-simple.sql  test-usage-db-testapp.c  test-usage-dump-entries.sql  word-list.h
tests/manual/: Makefile.am  Makefile.in
tools/: Makefile.am  Makefile.in  current-menu  current-menu-dump  current-menu-dump.in  mock-json-app.c
tools-vala/: Makefile.am  Makefile.in  hud-gtk.c  hud-gtk.ui  hud-gtk.vala
